<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:text="@string/titulolista"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="@dimen/alturaimagen"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_marginBottom="@dimen/fab_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion"
            android:text="@string/titulolista"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="@dimen/alturaimagen"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_marginBottom="@dimen/fab_margin"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comentarios"
            android:text="@string/titulolista"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="@dimen/alturaimagen"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_marginBottom="@dimen/fab_margin"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/alturaimagen"
                android:layout_weight="0.9"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agreguecomentario"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/agregar"></Button>

        </LinearLayout>
    </LinearLayout>

</ScrollView>